# pyvpt2

./: .gitignore  .lgtm.yml  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  publish_pypi.yaml
api/: index.html
devtools/: README.md
devtools/conda-envs/: docs_env.yaml  test_env.yaml  test_env_nightly.yaml  test_env_stable.yaml
docs/: Makefile  README.md  api.md  api.rst  conf.py  getting_started.rst  index.md  index.rst  make.bat  tutorial.md
pyvpt2/: __init__.py  _version.py  constants.py  fermi_solver.py  quartic.py  result.py  schema.py  task_base.py  task_planner.py  test.py  vpt2.py
pyvpt2/examples/: h2co.py  hf.py  water.py
pyvpt2/tests/: test_fermi_solver.py  test_h2co.py  test_h2o.py  test_h2o_cbs.py  test_h2o_cfour.py  test_h2o_multilevel.py  test_h2o_qcng.py  test_h2o_snowflake.py  test_h2o_snowflake2.py  test_hcn.py  test_hf.py  test_polyad.py  test_pyvpt2.py
search/: search_index.json
tutorial/: index.html
