# Helper file to handle all configs

[metadata]
name = pyvpt2
version = 0.0.0
author = Philip Nelson
author_email = pmnelson@gatech.edu
description = Package to calculate VPT2 anharmonic frequencies.
long_description = file: README.md, LICENSE
license = BSD-3-Clause

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.8

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    pyvpt2/_version.py

[aliases]
test = pytest
